[Feature][Connector-V2][Lance]fix LanceCatalogTest & cannot find /native/osx-x86_64/libopendal_java.dylib